cum_position_count works as expected

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -2345,7 +2345,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# position_count will be a cumulative count used to filter the data to the timeframe between the entry \n",
+    "# and exit signals so anytime there is an \"entry + buy\" or \"entry + short\" the count should increase by 1\n",
+    "renko_full_data['position_count'] = np.where(renko_full_data['entry_signal'] == 'entry + buy', 1, np.where(renko_full_data['entry_signal'] == 'entry + short', 1, 0))\n",
+    "renko_full_data['cum_position_count'] = renko_full_data['position_count'].cumsum()\n",
+    "# when 'entry_signal' is 'none' then the 'cum_position_count' should be null\n",
+    "renko_full_data['cum_position_count'] = np.where(renko_full_data['entry_signal'] == 'none', np.nan, renko_full_data['cum_position_count'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -2370,128 +2384,182 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>entry_signal</th>\n",
-       "      <th>close</th>\n",
-       "      <th>first_TP_goal</th>\n",
+       "      <th>cum_position_count</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>datetime</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2023-01-01 19:01:00</th>\n",
-       "      <td>entry + buy</td>\n",
-       "      <td>1.070225</td>\n",
-       "      <td>1.070550</td>\n",
+       "      <th>2023-12-29 10:49:00</th>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-01-01 19:47:00</th>\n",
-       "      <td>entry + buy</td>\n",
-       "      <td>1.069900</td>\n",
-       "      <td>1.070225</td>\n",
+       "      <th>2023-12-29 10:49:00</th>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-01-01 22:44:00</th>\n",
-       "      <td>entry + short</td>\n",
-       "      <td>1.069250</td>\n",
-       "      <td>1.068925</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-02 00:11:00</th>\n",
-       "      <td>entry + short</td>\n",
-       "      <td>1.069250</td>\n",
-       "      <td>1.068925</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-02 02:16:00</th>\n",
-       "      <td>entry + short</td>\n",
-       "      <td>1.068275</td>\n",
-       "      <td>1.067950</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-29 10:47:00</th>\n",
-       "      <td>entry + buy</td>\n",
-       "      <td>1.107275</td>\n",
-       "      <td>1.107600</td>\n",
+       "      <th>2023-12-29 10:49:00</th>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 10:53:00</th>\n",
        "      <td>entry + short</td>\n",
-       "      <td>1.105325</td>\n",
-       "      <td>1.105000</td>\n",
+       "      <td>2368.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 10:57:00</th>\n",
+       "      <td>short</td>\n",
+       "      <td>2368.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 10:57:00</th>\n",
+       "      <td>short</td>\n",
+       "      <td>2368.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 10:57:00</th>\n",
+       "      <td>short</td>\n",
+       "      <td>2368.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 11:07:00</th>\n",
+       "      <td>exit</td>\n",
+       "      <td>2368.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 11:09:00</th>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 11:11:00</th>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 11:51:00</th>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 12:45:00</th>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 13:01:00</th>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 13:01:00</th>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 13:23:00</th>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 13:42:00</th>\n",
        "      <td>entry + buy</td>\n",
-       "      <td>1.105650</td>\n",
-       "      <td>1.105975</td>\n",
+       "      <td>2369.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 14:05:00</th>\n",
+       "      <td>exit</td>\n",
+       "      <td>2369.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 14:07:00</th>\n",
        "      <td>entry + short</td>\n",
-       "      <td>1.104675</td>\n",
-       "      <td>1.104350</td>\n",
+       "      <td>2370.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 14:22:00</th>\n",
+       "      <td>short</td>\n",
+       "      <td>2370.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 14:33:00</th>\n",
+       "      <td>short</td>\n",
+       "      <td>2370.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 15:08:00</th>\n",
+       "      <td>exit</td>\n",
+       "      <td>2370.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 15:16:00</th>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 15:43:00</th>\n",
        "      <td>entry + short</td>\n",
-       "      <td>1.104350</td>\n",
-       "      <td>1.104025</td>\n",
+       "      <td>2371.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 15:54:00</th>\n",
+       "      <td>short</td>\n",
+       "      <td>2371.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 16:09:00</th>\n",
+       "      <td>short</td>\n",
+       "      <td>2371.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2371 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      entry_signal     close  first_TP_goal\n",
-       "datetime                                                   \n",
-       "2023-01-01 19:01:00    entry + buy  1.070225       1.070550\n",
-       "2023-01-01 19:47:00    entry + buy  1.069900       1.070225\n",
-       "2023-01-01 22:44:00  entry + short  1.069250       1.068925\n",
-       "2023-01-02 00:11:00  entry + short  1.069250       1.068925\n",
-       "2023-01-02 02:16:00  entry + short  1.068275       1.067950\n",
-       "...                            ...       ...            ...\n",
-       "2023-12-29 10:47:00    entry + buy  1.107275       1.107600\n",
-       "2023-12-29 10:53:00  entry + short  1.105325       1.105000\n",
-       "2023-12-29 13:42:00    entry + buy  1.105650       1.105975\n",
-       "2023-12-29 14:07:00  entry + short  1.104675       1.104350\n",
-       "2023-12-29 15:43:00  entry + short  1.104350       1.104025\n",
-       "\n",
-       "[2371 rows x 3 columns]"
+       "                      entry_signal  cum_position_count\n",
+       "datetime                                              \n",
+       "2023-12-29 10:49:00           none                 NaN\n",
+       "2023-12-29 10:49:00           none                 NaN\n",
+       "2023-12-29 10:49:00           none                 NaN\n",
+       "2023-12-29 10:53:00  entry + short              2368.0\n",
+       "2023-12-29 10:57:00          short              2368.0\n",
+       "2023-12-29 10:57:00          short              2368.0\n",
+       "2023-12-29 10:57:00          short              2368.0\n",
+       "2023-12-29 11:07:00           exit              2368.0\n",
+       "2023-12-29 11:09:00           none                 NaN\n",
+       "2023-12-29 11:11:00           none                 NaN\n",
+       "2023-12-29 11:51:00           none                 NaN\n",
+       "2023-12-29 12:45:00           none                 NaN\n",
+       "2023-12-29 13:01:00           none                 NaN\n",
+       "2023-12-29 13:01:00           none                 NaN\n",
+       "2023-12-29 13:23:00           none                 NaN\n",
+       "2023-12-29 13:42:00    entry + buy              2369.0\n",
+       "2023-12-29 14:05:00           exit              2369.0\n",
+       "2023-12-29 14:07:00  entry + short              2370.0\n",
+       "2023-12-29 14:22:00          short              2370.0\n",
+       "2023-12-29 14:33:00          short              2370.0\n",
+       "2023-12-29 15:08:00           exit              2370.0\n",
+       "2023-12-29 15:16:00           none                 NaN\n",
+       "2023-12-29 15:43:00  entry + short              2371.0\n",
+       "2023-12-29 15:54:00          short              2371.0\n",
+       "2023-12-29 16:09:00          short              2371.0"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# filter renko_full_data to just the rows where entry_signal is entry + buy or entry + short and only show the columns 'entry_signal', 'close', and 'first_TP_goal'.\n",
-    "renko_full_data.loc[(renko_full_data['entry_signal'] == 'entry + buy') | (renko_full_data['entry_signal'] == 'entry + short'), ['entry_signal', 'close', 'first_TP_goal']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# position_count will be a cumulative count used to filter the data to the timeframe between the entry \n",
-    "# and exit signals so anytime there is an \"entry + buy\" or \"entry + short\" the count should increase by 1\n",
-    "renko_full_data['position_count'] = np.where(renko_full_data['entry_signal'] == 'entry + buy', 1, np.where(renko_full_data['entry_signal'] == 'entry + short', 1, 0))\n",
-    "renko_full_data['cum_position_count'] = renko_full_data['position_count'].cumsum()\n",
-    "# when 'entry_signal' is 'none' then the 'cum_position_count' should be null\n",
-    "renko_full_data['cum_position_count'] = np.where(renko_full_data['entry_signal'] == 'none', np.nan, renko_full_data['cum_position_count'])"
+    "renko_full_data.loc[:,['entry_signal', 'cum_position_count']].tail(25)"
    ]
   },
   {
