decided not to move up the S/L from the initial position.

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1850,7 +1850,7 @@
        "2023-12-29 16:09:00       short        red  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2230,7 +2230,7 @@
        "2023-12-29 16:09:00          0          short  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2253,7 +2253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2275,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2306,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2324,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2345,7 +2345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2359,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2370,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2384,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2395,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2406,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2424,11 +2424,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if first_TP_hit is 1 then the stop_loss should be set to the entry close price for that position so we need to group by the cum_position_count\n",
-    "renko_full_data['stop_loss'] = np.where(renko_full_data['first_TP_hit'] == 1, renko_full_data.groupby('cum_position_count')['close'].transform('first'), renko_full_data['stop_loss'])\n",
-    "# drop 'stop_loss_test'\n",
-    "renko_full_data.drop(columns=['stop_loss_test'], inplace=True)\n",
-    "\n"
+    "# maybe implement this later - right now, let's keep the SL where it is\n",
+    "\n",
+    "# # if first_TP_hit is 1 then the stop_loss should be set to the entry close price for that position so we need to group by the cum_position_count\n",
+    "# renko_full_data['stop_loss'] = np.where(renko_full_data['first_TP_hit'] == 1, renko_full_data.groupby('cum_position_count')['close'].transform('first'), renko_full_data['stop_loss'])\n",
+    "# # drop 'stop_loss_test'\n",
+    "# renko_full_data.drop(columns=['stop_loss_test'], inplace=True)\n",
+    "# redetermine whether the new stop_loss was hit after we took the first TP\n",
+    "# renko_full_data['exit_stop_loss'] = np.where((renko_full_data['entry_signal'] == 'buy') & (renko_full_data['stop_loss'] > renko_full_data['low']), 1,\n",
+    "#                                         np.where((renko_full_data['entry_signal'] == 'short') & (renko_full_data['stop_loss'] < renko_full_data['high']), 1, 0))\n",
+    "# renko_full_data.loc[renko_full_data['exit_stop_loss'] == 1]\n",
+    "# happens 908/2371 = 40% of the time"
    ]
   },
   {
@@ -3137,17 +3143,6 @@
    "source": [
     "# filter renko_full_data to just the rows where entry_signal is entry + buy or entry + short and only show the columns 'entry_signal', 'close', and 'first_TP_goal'.\n",
     "renko_full_data.loc[:,['high', 'low', 'entry_signal', 'stop_loss', 'cum_position_count', 'first_TP_hit', 'first_TP_goal']].tail(25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# redetermine whether the new stop_loss was hit after we took the first TP\n",
-    "renko_full_data['exit_stop_loss'] = np.where((renko_full_data['entry_signal'] == 'buy') & (renko_full_data['stop_loss'] > renko_full_data['low']), 1,\n",
-    "                                        np.where((renko_full_data['entry_signal'] == 'short') & (renko_full_data['stop_loss'] < renko_full_data['high']), 1, 0))"
    ]
   },
   {
