calculated the max daily drawdown, found the best lot size for both accts

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -1613,26 +1613,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 15-min aggregation"
+    "## Parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Renko charts (from 1 min data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1635,7 @@
     "lengthSignal = 9\n",
     "\n",
     "# Lot Size\n",
-    "lot_size = 10\n",
+    "lot_size = 5\n",
     "per_lot = 100000\n",
     "\n",
     "# Commissions\n",
@@ -1658,6 +1644,27 @@
     "\n",
     "# starting balance\n",
     "balance = 200000\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 15-min aggregation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Renko charts (from 1 min data)"
    ]
   },
   {
@@ -2908,7 +2915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2966,10 +2973,10 @@
        "      <td>0.0</td>\n",
        "      <td>1.069575</td>\n",
        "      <td>buy</td>\n",
-       "      <td>-3.250000e+02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-355.0</td>\n",
-       "      <td>-375.0</td>\n",
+       "      <td>-1.625000e+02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-177.50</td>\n",
+       "      <td>-187.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2.0</th>\n",
@@ -2979,10 +2986,10 @@
        "      <td>1.0</td>\n",
        "      <td>1.069575</td>\n",
        "      <td>buy</td>\n",
-       "      <td>-1.625000e+02</td>\n",
-       "      <td>162.5</td>\n",
-       "      <td>-30.0</td>\n",
-       "      <td>-50.0</td>\n",
+       "      <td>-8.125000e+01</td>\n",
+       "      <td>81.25</td>\n",
+       "      <td>-15.00</td>\n",
+       "      <td>-25.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.0</th>\n",
@@ -2992,10 +2999,10 @@
        "      <td>0.0</td>\n",
        "      <td>1.069900</td>\n",
        "      <td>short</td>\n",
-       "      <td>-3.250000e+02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-355.0</td>\n",
-       "      <td>-375.0</td>\n",
+       "      <td>-1.625000e+02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-177.50</td>\n",
+       "      <td>-187.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4.0</th>\n",
@@ -3005,10 +3012,10 @@
        "      <td>1.0</td>\n",
        "      <td>1.068600</td>\n",
        "      <td>short</td>\n",
-       "      <td>3.250000e+02</td>\n",
-       "      <td>162.5</td>\n",
-       "      <td>457.5</td>\n",
-       "      <td>437.5</td>\n",
+       "      <td>1.625000e+02</td>\n",
+       "      <td>81.25</td>\n",
+       "      <td>228.75</td>\n",
+       "      <td>218.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.0</th>\n",
@@ -3018,10 +3025,10 @@
        "      <td>1.0</td>\n",
        "      <td>1.068275</td>\n",
        "      <td>short</td>\n",
-       "      <td>-1.110223e-10</td>\n",
-       "      <td>162.5</td>\n",
-       "      <td>132.5</td>\n",
-       "      <td>112.5</td>\n",
+       "      <td>-5.551115e-11</td>\n",
+       "      <td>81.25</td>\n",
+       "      <td>66.25</td>\n",
+       "      <td>56.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -3044,10 +3051,10 @@
        "      <td>1.0</td>\n",
        "      <td>1.106950</td>\n",
        "      <td>buy</td>\n",
-       "      <td>-1.625000e+02</td>\n",
-       "      <td>162.5</td>\n",
-       "      <td>-30.0</td>\n",
-       "      <td>-50.0</td>\n",
+       "      <td>-8.125000e+01</td>\n",
+       "      <td>81.25</td>\n",
+       "      <td>-15.00</td>\n",
+       "      <td>-25.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2368.0</th>\n",
@@ -3057,10 +3064,10 @@
        "      <td>1.0</td>\n",
        "      <td>1.105000</td>\n",
        "      <td>short</td>\n",
-       "      <td>1.625000e+02</td>\n",
-       "      <td>162.5</td>\n",
-       "      <td>295.0</td>\n",
-       "      <td>275.0</td>\n",
+       "      <td>8.125000e+01</td>\n",
+       "      <td>81.25</td>\n",
+       "      <td>147.50</td>\n",
+       "      <td>137.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2369.0</th>\n",
@@ -3070,10 +3077,10 @@
        "      <td>0.0</td>\n",
        "      <td>1.105000</td>\n",
        "      <td>buy</td>\n",
-       "      <td>-3.250000e+02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-355.0</td>\n",
-       "      <td>-375.0</td>\n",
+       "      <td>-1.625000e+02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-177.50</td>\n",
+       "      <td>-187.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2370.0</th>\n",
@@ -3083,10 +3090,10 @@
        "      <td>1.0</td>\n",
        "      <td>1.104675</td>\n",
        "      <td>short</td>\n",
-       "      <td>-1.110223e-10</td>\n",
-       "      <td>162.5</td>\n",
-       "      <td>132.5</td>\n",
-       "      <td>112.5</td>\n",
+       "      <td>-5.551115e-11</td>\n",
+       "      <td>81.25</td>\n",
+       "      <td>66.25</td>\n",
+       "      <td>56.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2371.0</th>\n",
@@ -3096,10 +3103,10 @@
        "      <td>1.0</td>\n",
        "      <td>1.103700</td>\n",
        "      <td>short</td>\n",
-       "      <td>3.250000e+02</td>\n",
-       "      <td>162.5</td>\n",
-       "      <td>457.5</td>\n",
-       "      <td>437.5</td>\n",
+       "      <td>1.625000e+02</td>\n",
+       "      <td>81.25</td>\n",
+       "      <td>228.75</td>\n",
+       "      <td>218.75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3123,36 +3130,36 @@
        "\n",
        "                    first_TP_hit  exit_price direction  secondary_profit  \\\n",
        "cum_position_count                                                         \n",
-       "1.0                          0.0    1.069575       buy     -3.250000e+02   \n",
-       "2.0                          1.0    1.069575       buy     -1.625000e+02   \n",
-       "3.0                          0.0    1.069900     short     -3.250000e+02   \n",
-       "4.0                          1.0    1.068600     short      3.250000e+02   \n",
-       "5.0                          1.0    1.068275     short     -1.110223e-10   \n",
+       "1.0                          0.0    1.069575       buy     -1.625000e+02   \n",
+       "2.0                          1.0    1.069575       buy     -8.125000e+01   \n",
+       "3.0                          0.0    1.069900     short     -1.625000e+02   \n",
+       "4.0                          1.0    1.068600     short      1.625000e+02   \n",
+       "5.0                          1.0    1.068275     short     -5.551115e-11   \n",
        "...                          ...         ...       ...               ...   \n",
-       "2367.0                       1.0    1.106950       buy     -1.625000e+02   \n",
-       "2368.0                       1.0    1.105000     short      1.625000e+02   \n",
-       "2369.0                       0.0    1.105000       buy     -3.250000e+02   \n",
-       "2370.0                       1.0    1.104675     short     -1.110223e-10   \n",
-       "2371.0                       1.0    1.103700     short      3.250000e+02   \n",
+       "2367.0                       1.0    1.106950       buy     -8.125000e+01   \n",
+       "2368.0                       1.0    1.105000     short      8.125000e+01   \n",
+       "2369.0                       0.0    1.105000       buy     -1.625000e+02   \n",
+       "2370.0                       1.0    1.104675     short     -5.551115e-11   \n",
+       "2371.0                       1.0    1.103700     short      1.625000e+02   \n",
        "\n",
        "                    primary_profit  nova_profit  msolutions_profit  \n",
        "cum_position_count                                                  \n",
-       "1.0                            0.0       -355.0             -375.0  \n",
-       "2.0                          162.5        -30.0              -50.0  \n",
-       "3.0                            0.0       -355.0             -375.0  \n",
-       "4.0                          162.5        457.5              437.5  \n",
-       "5.0                          162.5        132.5              112.5  \n",
+       "1.0                           0.00      -177.50            -187.50  \n",
+       "2.0                          81.25       -15.00             -25.00  \n",
+       "3.0                           0.00      -177.50            -187.50  \n",
+       "4.0                          81.25       228.75             218.75  \n",
+       "5.0                          81.25        66.25              56.25  \n",
        "...                            ...          ...                ...  \n",
-       "2367.0                       162.5        -30.0              -50.0  \n",
-       "2368.0                       162.5        295.0              275.0  \n",
-       "2369.0                         0.0       -355.0             -375.0  \n",
-       "2370.0                       162.5        132.5              112.5  \n",
-       "2371.0                       162.5        457.5              437.5  \n",
+       "2367.0                       81.25       -15.00             -25.00  \n",
+       "2368.0                       81.25       147.50             137.50  \n",
+       "2369.0                        0.00      -177.50            -187.50  \n",
+       "2370.0                       81.25        66.25              56.25  \n",
+       "2371.0                       81.25       228.75             218.75  \n",
        "\n",
        "[2371 rows x 10 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3282,11 +3289,92 @@
     "profit_df_friday['entry_exit_day_of_week'] = np.where(profit_df_friday['entry_day_of_week'] != profit_df_friday['exit_day_of_week'], 1, 0)\n",
     "# find the number of times the entry and exit day of the week are different\n",
     "weekend_hold = profit_df_friday.loc[profit_df_friday['entry_exit_day_of_week'] == 1]\n",
-    "weekend_hold\n",
-    "# find the profit total for weekend holds\n",
-    "# print(weekend_hold['msolutions_profit'].sum(), weekend_hold['nova_profit'].sum())\n",
-    "# show just entry and exit day of week\n",
-    "# profit_df_friday.loc[:,['entry_day_of_week', 'exit_day_of_week']]"
+    "weekend_hold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Daily Drawdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nova_profit</th>\n",
+       "      <th>msolutions_profit</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>entry_time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-03-28</th>\n",
+       "      <td>-1043.75</td>\n",
+       "      <td>-1143.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            nova_profit  msolutions_profit\n",
+       "entry_time                                \n",
+       "2023-03-28     -1043.75           -1143.75"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# use the entry time and resample to each day and find the sum of the profit\n",
+    "profit_df['entry_time'] = pd.to_datetime(profit_df['entry_time'])\n",
+    "profit_df_new_index = profit_df.set_index('entry_time')\n",
+    "# find the sum of the nova and msolutions profit for each day\n",
+    "profit_df_daily = profit_df_new_index.resample('D').agg({'nova_profit': 'sum', 'msolutions_profit': 'sum'})\n",
+    "# fill the null values with 0\n",
+    "profit_df_daily.fillna(0, inplace=True)\n",
+    "# find the min of nova_profit and msolutions_profit\n",
+    "nova_min = profit_df_daily['nova_profit'].min()\n",
+    "msolutions_min = profit_df_daily['msolutions_profit'].min()\n",
+    "# find the days when nova_profit equals nova_min\n",
+    "profit_df_daily.loc[profit_df_daily['nova_profit'] == nova_min]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summation and Plotting"
    ]
   },
   {
