--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -3673,6 +3673,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nova_profit</th>\n",
+       "      <th>msolutions_profit</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>entry_time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-03-05</th>\n",
+       "      <td>6287.500026</td>\n",
+       "      <td>5387.500026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-12</th>\n",
+       "      <td>11782.500000</td>\n",
+       "      <td>10862.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-19</th>\n",
+       "      <td>25145.000000</td>\n",
+       "      <td>23925.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-26</th>\n",
+       "      <td>11144.999975</td>\n",
+       "      <td>10124.999975</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             nova_profit  msolutions_profit\n",
+       "entry_time                                 \n",
+       "2023-03-05   6287.500026        5387.500026\n",
+       "2023-03-12  11782.500000       10862.500000\n",
+       "2023-03-19  25145.000000       23925.000000\n",
+       "2023-03-26  11144.999975       10124.999975"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter profit_df_weekly to just september \n",
+    "profit_df_weekly.loc['2023-03']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 171,
    "metadata": {},
    "outputs": [
