created new nb for connecting to mt5, running into a lot of issues trying to initialize mt5

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -2,15 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 174,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 23.3.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting MetaTrader5\n",
+      "  Downloading MetaTrader5-5.0.45-cp311-cp311-win_amd64.whl (49 kB)\n",
+      "     ---------------------------------------- 0.0/49.9 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 49.9/49.9 kB 2.6 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy>=1.7 in c:\\users\\williamfetzner\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from MetaTrader5) (1.24.4)\n",
+      "Installing collected packages: MetaTrader5\n",
+      "Successfully installed MetaTrader5-5.0.45\n"
+     ]
+    }
+   ],
    "source": [
     "# %pip install yfinance\n",
     "# %pip install matplotlib\n",
     "# %pip install mplfinance\n",
     "# %pip install renkodf\n",
-    "# %pip install commitizen"
+    "# %pip install commitizen\n",
+    "# %pip install --upgrade MetaTrader5\n"
    ]
   },
   {
@@ -33,7 +64,8 @@
     "import datetime as dt\n",
     "import mplfinance \n",
     "from renkodf import Renko\n",
-    "from scipy.signal import lfilter"
+    "from scipy.signal import lfilter\n",
+    "import MetaTrader5 as mt5"
    ]
   },
   {
