issue: this is the connection for mt5, I have mt4 installed

--- a/mt5_code.ipynb
+++ b/mt5_code.ipynb
@@ -61,16 +61,7 @@
      "text": [
       "MetaTrader5 package author:  MetaQuotes Ltd.\n",
       "MetaTrader5 package version:  5.0.45\n",
-      "initialize() failed, error code = (-10003, \"IPC initialize failed, Pipe server didn't answer in 60 sec\")\n",
-      "(0, 0, '')\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "initialize() failed, error code = (-10003, \"IPC initialize failed, Pipe server didn't answer in 60 sec\")\n"
      ]
     }
    ],
@@ -87,10 +78,10 @@
     "# establish connection to the MetaTrader 5 terminal\n",
     "if not mt5.initialize(path = \"C:/Program Files (x86)/MetaTrader FXCH/terminal.exe\", login=acct_nbr, password=pw, server=server):\n",
     "    print(\"initialize() failed, error code =\",mt5.last_error())\n",
-    "    quit()\n",
+    "    mt5.shutdown()\n",
     " \n",
     "# display data on MetaTrader 5 version\n",
-    "print(mt5.version())\n",
+    "# print(mt5.version())\n",
     "# # connect to the trade account without specifying a password and a server\n",
     "# account=\n",
     "# authorized=mt5.login(account)  # the terminal database password is applied if connection data is set to be remembered\n",
