--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -589,6 +589,450 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.005637897581809955"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ohlc.open.count()\n",
+    "# 1819/322638\n",
+    "# 0.5% of the time it skips minutes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>diff</th>\n",
+       "      <th>diff_day</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-12-25 17:04:00</th>\n",
+       "      <td>1.10009</td>\n",
+       "      <td>1.10030</td>\n",
+       "      <td>1.10009</td>\n",
+       "      <td>1.10011</td>\n",
+       "      <td>2023-12-25 17:04:00</td>\n",
+       "      <td>846.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-23 18:00:00</th>\n",
+       "      <td>1.08316</td>\n",
+       "      <td>1.08327</td>\n",
+       "      <td>1.08316</td>\n",
+       "      <td>1.08322</td>\n",
+       "      <td>2023-03-23 18:00:00</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-03 11:00:00</th>\n",
+       "      <td>1.08871</td>\n",
+       "      <td>1.08888</td>\n",
+       "      <td>1.08867</td>\n",
+       "      <td>1.08867</td>\n",
+       "      <td>2023-04-03 11:00:00</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-27 09:00:00</th>\n",
+       "      <td>1.07731</td>\n",
+       "      <td>1.07736</td>\n",
+       "      <td>1.07709</td>\n",
+       "      <td>1.07730</td>\n",
+       "      <td>2023-03-27 09:00:00</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-05-12 15:00:00</th>\n",
+       "      <td>1.08533</td>\n",
+       "      <td>1.08536</td>\n",
+       "      <td>1.08530</td>\n",
+       "      <td>1.08535</td>\n",
+       "      <td>2023-05-12 15:00:00</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-05 09:00:00</th>\n",
+       "      <td>1.09578</td>\n",
+       "      <td>1.09586</td>\n",
+       "      <td>1.09560</td>\n",
+       "      <td>1.09565</td>\n",
+       "      <td>2023-04-05 09:00:00</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-05-10 19:00:00</th>\n",
+       "      <td>1.09861</td>\n",
+       "      <td>1.09868</td>\n",
+       "      <td>1.09861</td>\n",
+       "      <td>1.09866</td>\n",
+       "      <td>2023-05-10 19:00:00</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-02 16:00:00</th>\n",
+       "      <td>1.06002</td>\n",
+       "      <td>1.06002</td>\n",
+       "      <td>1.05977</td>\n",
+       "      <td>1.05982</td>\n",
+       "      <td>2023-03-02 16:00:00</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-09 11:00:00</th>\n",
+       "      <td>1.05686</td>\n",
+       "      <td>1.05698</td>\n",
+       "      <td>1.05670</td>\n",
+       "      <td>1.05676</td>\n",
+       "      <td>2023-03-09 11:00:00</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-27 14:00:00</th>\n",
+       "      <td>1.09986</td>\n",
+       "      <td>1.09986</td>\n",
+       "      <td>1.09974</td>\n",
+       "      <td>1.09976</td>\n",
+       "      <td>2023-07-27 14:00:00</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>90 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        open     high      low    close            datetime  \\\n",
+       "datetime                                                                      \n",
+       "2023-12-25 17:04:00  1.10009  1.10030  1.10009  1.10011 2023-12-25 17:04:00   \n",
+       "2023-03-23 18:00:00  1.08316  1.08327  1.08316  1.08322 2023-03-23 18:00:00   \n",
+       "2023-04-03 11:00:00  1.08871  1.08888  1.08867  1.08867 2023-04-03 11:00:00   \n",
+       "2023-03-27 09:00:00  1.07731  1.07736  1.07709  1.07730 2023-03-27 09:00:00   \n",
+       "2023-05-12 15:00:00  1.08533  1.08536  1.08530  1.08535 2023-05-12 15:00:00   \n",
+       "...                      ...      ...      ...      ...                 ...   \n",
+       "2023-04-05 09:00:00  1.09578  1.09586  1.09560  1.09565 2023-04-05 09:00:00   \n",
+       "2023-05-10 19:00:00  1.09861  1.09868  1.09861  1.09866 2023-05-10 19:00:00   \n",
+       "2023-03-02 16:00:00  1.06002  1.06002  1.05977  1.05982 2023-03-02 16:00:00   \n",
+       "2023-03-09 11:00:00  1.05686  1.05698  1.05670  1.05676 2023-03-09 11:00:00   \n",
+       "2023-07-27 14:00:00  1.09986  1.09986  1.09974  1.09976 2023-07-27 14:00:00   \n",
+       "\n",
+       "                      diff  diff_day  \n",
+       "datetime                              \n",
+       "2023-12-25 17:04:00  846.0       0.0  \n",
+       "2023-03-23 18:00:00  181.0       0.0  \n",
+       "2023-04-03 11:00:00  181.0       0.0  \n",
+       "2023-03-27 09:00:00  121.0       0.0  \n",
+       "2023-05-12 15:00:00  121.0       0.0  \n",
+       "...                    ...       ...  \n",
+       "2023-04-05 09:00:00  121.0       0.0  \n",
+       "2023-05-10 19:00:00  121.0       0.0  \n",
+       "2023-03-02 16:00:00  121.0       0.0  \n",
+       "2023-03-09 11:00:00   66.0       0.0  \n",
+       "2023-07-27 14:00:00   64.0       0.0  \n",
+       "\n",
+       "[90 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# # find the difference in minutes between each row\n",
+    "# ohlc['diff'] = ohlc.index.to_series().diff().dt.total_seconds().div(60, fill_value=0)\n",
+    "# # find the difference in days between each row, place a 0 if it is the same day\n",
+    "# ohlc['diff_day'] = ohlc.index.to_series().diff().dt.days.fillna(0)\n",
+    "# # filter to where the diff is > 1 but the diff_day is 0\n",
+    "# ohlc_fil = ohlc.loc[(ohlc['diff'] > 1) & (ohlc['diff_day'] == 0)]\n",
+    "# # sort ohlc_fil by the diff column\n",
+    "# ohlc_fil = ohlc_fil.sort_values(by=['diff'], ascending=False)\n",
+    "# ohlc_fil.head(90)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>diff</th>\n",
+       "      <th>diff_day</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-03-23 14:00:00</th>\n",
+       "      <td>1.08419</td>\n",
+       "      <td>1.08528</td>\n",
+       "      <td>1.08416</td>\n",
+       "      <td>1.08523</td>\n",
+       "      <td>2023-03-23 14:00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-23 14:01:00</th>\n",
+       "      <td>1.08523</td>\n",
+       "      <td>1.08531</td>\n",
+       "      <td>1.08451</td>\n",
+       "      <td>1.08471</td>\n",
+       "      <td>2023-03-23 14:01:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-23 14:02:00</th>\n",
+       "      <td>1.08470</td>\n",
+       "      <td>1.08481</td>\n",
+       "      <td>1.08438</td>\n",
+       "      <td>1.08454</td>\n",
+       "      <td>2023-03-23 14:02:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-23 14:03:00</th>\n",
+       "      <td>1.08453</td>\n",
+       "      <td>1.08475</td>\n",
+       "      <td>1.08432</td>\n",
+       "      <td>1.08473</td>\n",
+       "      <td>2023-03-23 14:03:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-23 14:04:00</th>\n",
+       "      <td>1.08475</td>\n",
+       "      <td>1.08504</td>\n",
+       "      <td>1.08470</td>\n",
+       "      <td>1.08479</td>\n",
+       "      <td>2023-03-23 14:04:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-23 14:56:00</th>\n",
+       "      <td>1.08393</td>\n",
+       "      <td>1.08411</td>\n",
+       "      <td>1.08390</td>\n",
+       "      <td>1.08410</td>\n",
+       "      <td>2023-03-23 14:56:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-23 14:57:00</th>\n",
+       "      <td>1.08410</td>\n",
+       "      <td>1.08419</td>\n",
+       "      <td>1.08405</td>\n",
+       "      <td>1.08416</td>\n",
+       "      <td>2023-03-23 14:57:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-23 14:58:00</th>\n",
+       "      <td>1.08416</td>\n",
+       "      <td>1.08427</td>\n",
+       "      <td>1.08410</td>\n",
+       "      <td>1.08423</td>\n",
+       "      <td>2023-03-23 14:58:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-23 14:59:00</th>\n",
+       "      <td>1.08425</td>\n",
+       "      <td>1.08426</td>\n",
+       "      <td>1.08395</td>\n",
+       "      <td>1.08397</td>\n",
+       "      <td>2023-03-23 14:59:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-23 18:00:00</th>\n",
+       "      <td>1.08316</td>\n",
+       "      <td>1.08327</td>\n",
+       "      <td>1.08316</td>\n",
+       "      <td>1.08322</td>\n",
+       "      <td>2023-03-23 18:00:00</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>61 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        open     high      low    close            datetime  \\\n",
+       "datetime                                                                      \n",
+       "2023-03-23 14:00:00  1.08419  1.08528  1.08416  1.08523 2023-03-23 14:00:00   \n",
+       "2023-03-23 14:01:00  1.08523  1.08531  1.08451  1.08471 2023-03-23 14:01:00   \n",
+       "2023-03-23 14:02:00  1.08470  1.08481  1.08438  1.08454 2023-03-23 14:02:00   \n",
+       "2023-03-23 14:03:00  1.08453  1.08475  1.08432  1.08473 2023-03-23 14:03:00   \n",
+       "2023-03-23 14:04:00  1.08475  1.08504  1.08470  1.08479 2023-03-23 14:04:00   \n",
+       "...                      ...      ...      ...      ...                 ...   \n",
+       "2023-03-23 14:56:00  1.08393  1.08411  1.08390  1.08410 2023-03-23 14:56:00   \n",
+       "2023-03-23 14:57:00  1.08410  1.08419  1.08405  1.08416 2023-03-23 14:57:00   \n",
+       "2023-03-23 14:58:00  1.08416  1.08427  1.08410  1.08423 2023-03-23 14:58:00   \n",
+       "2023-03-23 14:59:00  1.08425  1.08426  1.08395  1.08397 2023-03-23 14:59:00   \n",
+       "2023-03-23 18:00:00  1.08316  1.08327  1.08316  1.08322 2023-03-23 18:00:00   \n",
+       "\n",
+       "                      diff  diff_day  \n",
+       "datetime                              \n",
+       "2023-03-23 14:00:00    1.0       0.0  \n",
+       "2023-03-23 14:01:00    1.0       0.0  \n",
+       "2023-03-23 14:02:00    1.0       0.0  \n",
+       "2023-03-23 14:03:00    1.0       0.0  \n",
+       "2023-03-23 14:04:00    1.0       0.0  \n",
+       "...                    ...       ...  \n",
+       "2023-03-23 14:56:00    1.0       0.0  \n",
+       "2023-03-23 14:57:00    1.0       0.0  \n",
+       "2023-03-23 14:58:00    1.0       0.0  \n",
+       "2023-03-23 14:59:00    1.0       0.0  \n",
+       "2023-03-23 18:00:00  181.0       0.0  \n",
+       "\n",
+       "[61 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter ohlc to be between march 23rd 12:00 and march 23rd 19:00\n",
+    "# ohlc_march_23 = ohlc.loc['2023-03-23 14:00':'2023-03-23 18:00']\n",
+    "# ohlc_march_23"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculations"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
